# iamctl-rust-sdk

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  sonar-project.properties
.github/workflows/: ci.yml  dependabot.yml  deploy-docs.yml  release.yml  security.yml  sonarqube.yml
coverage/: tarpaulin-report.json
docs/: DOCUMENTATION_PLAN.md  PROVIDER_ECOSYSTEM_GAPS.md
examples/: basic_provider.rs
examples/basic-provider/: Cargo.toml
examples/basic-provider/src/: main.rs
iamctl-docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
iamctl-docs/docs/: api-reference.md  getting-started.md  intro.md
iamctl-docs/docs/concepts/: engine-provider.md  resources-changes.md  state.md  validation.md
iamctl-docs/docs/provider-development/: implementing-a-provider.md
iamctl-docs/docs/reference/: json-rpc.md
iamctl-docs/src/css/: custom.css
iamctl-docs/src/pages/: index.module.css  index.tsx
src/: lib.rs
src/provider/: mod.rs
src/server/: client.rs  handler.rs  handler_tests.rs  mod.rs  types.rs
src/state/: mod.rs
src/types/: mod.rs
src/utils/: error.rs  logging.rs  mod.rs  provider_source.rs  spec_decode.rs
src/validation/: mod.rs
tests/: logging_tests.rs  mod.rs  provider_source.rs  security_tests.rs  server_loop_tests.rs  state_tests.rs
tests/integration_tests/: mod.rs  server_tests.rs
tests/property_tests/: mod.rs  types_properties.rs
tests/types_tests/: mod.rs  types_tests.rs
tests/validation_tests/: mod.rs  validation_tests.rs
