[package]
name = "iamctl-rust-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Nkwenti Severian Ndongtsop <severiannkwenti@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Nkwenti-Severian-Ndongtsop/iamctl-rust-sdk"
repository = "https://github.com/Nkwenti-Severian-Ndongtsop/iamctl-rust-sdk"
documentation = "https://docs.rs/iamctl-rust-sdk"
description = "Rust SDK for building iamctl providers"
keywords = ["iam", "terraform", "infrastructure", "provider"]
categories = ["development-tools", "api-bindings"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
jsonschema = "0.17"

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
tokio-test = "0.4"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
insta = "1.34"

[features]
default = ["jsonrpc"]
jsonrpc = []
grpc = []
wasm = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
