[package]
name = "iamctl-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Nkwenti Severian Ndongtsop <severianndongtsop@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nkwenti-Severian-Ndongtsop/iamctl-rust-sdk"
homepage = "https://github.com/Nkwenti-Severian-Ndongtsop/iamctl-rust-sdk"
documentation = "https://docs.rs/iamctl-rust-sdk"
description = "A Rust SDK for building iamctl providers with type safety and performance"
keywords = ["iam", "sdk", "rust", "provider", "infrastructure"]
categories = ["development-tools", "api-bindings"]

[lib]
name = "iamctl_rust_sdk"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
jsonschema = "0.17"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.12"
pretty_assertions = "1.4"
proptest = "1.4"
tempfile = "3.8"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.34"

[features]
default = []
test-utils = []

[profile.dev]
debug = true
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
