[package]
name = "example-basic-provider"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
iamctl-rust-sdk = { path = "../../" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
schemars = "0.8"
